# BookMust

./: CMakeLists.txt  README.md
forms/: adding_book.ui  help_window.ui  mainwindow.ui  resourse.qrc  view_book.ui
include/: adding_book.h  database.h  help_window.h  mainwindow.h  qdynamicbutton.h  view_book.h
src/: adding_book.cpp  database.cpp  help_window.cpp  main.cpp  mainwindow.cpp  qdynamicbutton.cpp  view_book.cpp
